<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="bottom"
    android:layout_height="60dp">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:elevation="10dp"
        android:baselineAligned="false"
        android:background="@drawable/memo_gradient"
        android:layout_height="55dp"
        android:paddingRight="3dp"
        android:paddingLeft="3dp"
        android:gravity="center">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/shortcut_speech"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_list"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_mic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/smallBlackText"
                android:text="@string/dictation"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/icon_list"
                android:layout_marginTop="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/shortcut_notification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_add_notification"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_add_notification"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/smallBlackText"
                android:text="@string/Reminder"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/icon_add_notification"
                android:layout_marginTop="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/shortcut_format"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_format"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_format"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/smallBlackText"
                android:text="@string/format"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/icon_format"
                android:layout_marginTop="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/shortcut_done"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_done"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_done"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="@style/smallBlackText"
                android:text="@string/done"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/icon_done"
                android:layout_marginTop="1dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>


    </LinearLayout>

</RelativeLayout>